# traffic-arbitration

./: .gitignore  ADMIN_PANEL_DOCUMENTATION.md  CRUD_IMPLEMENTATION_REPORT.md  Dockerfile  GALLERY_OPTIMIZATION_REPORT.md  README.md  admin_architecture.md  config.tpl.yml  dev_tz.md  dev_tz2.md  development_plan.md  docker-compose.yml  pyproject.toml  requirements.txt
python/: alembic.ini  debug_scrape_articles.py  gen_models.py  pyproject.toml  run_scrapper.py  traffic_ar  traffic_arbit
python/alembic/: env.py
python/alembic/versions/: 2574b436e0f2_initial_migration.py  4086873fdb4c_add_slug_to_article_model.py  6a53e6bb9057_update_articles_and_external_articles_.py  830143884a89_add_unique_constraint_on_visual_content_.py  d2f5bc19f971_add_is_active_to_articlepreview.py
python/scripts/: assign_visual_content_filenames.py  download_missing_images.py  export_images.py  generate_previews.py
python/tests/: conftest.py  test_db_connection.py  test_scraper.py
python/traffic_arbirtation/: models.py
python/traffic_arbirtation/common/utils/: parsing.py
python/traffic_arbirtation/db/: connection.py  queries.py
python/traffic_arbirtation/scrapper/: __init__.py  base_scraper.py  commons.py  iadvert_scraper.py  main.py  runner.py  scraper_factory.py
python/traffic_arbirtation/web/: gunicorn_conf.py
python/traffic_arbirtation/web/static/js/: service-worker.js
python/traffic_arbitration/: models.py
python/traffic_arbitration/admin/: dependencies.py  gunicorn_conf.py  main.py  routes.py  schemas.py
python/traffic_arbitration/admin/routers/: __init__.py  articles.py  media.py  pipeline.py  settings.py
python/traffic_arbitration/admin/static/css/: admin.css
python/traffic_arbitration/admin/templates/: layouts.html
python/traffic_arbitration/admin/templates/admin/: index.html
python/traffic_arbitration/admin/templates/articles/: compare.html  form.html  list.html
python/traffic_arbitration/common/: config.py  config_loader.py  logging.py  utils.py
python/traffic_arbitration/db/: __init__.py  connection.py  db_init.py  queries.py
python/traffic_arbitration/scrapper/: base_scraper.py  driver_pool.py  iadvert_scraper.py  main.py  runner.py
python/traffic_arbitration/web/: cache.py  main.py  schemas.py  services.py  utils.py
python/traffic_arbitration/web/templates/: article.html  article_page.html  fcm.js  index.html  layout.html  preview.html
(+66 files in other folders)
